# besureAI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  README_CN.md  install.sh
.fastembed_cache/models--Xenova--bge-small-zh-v1.5/refs/: main
.fastembed_cache/models--Xenova--bge-small-zh-v1.5/snapshots/75c43b069aac4d136ba6bc1122f995fedcfd2781/: config.json
.fastembed_cache/models--Xenova--bge-small-zh-v1.5/snapshots/75c43b069aac4d136ba6bc1122f995fedcfd2781/onnx/: model.onnx
.github/: about.md
.github/workflows/: ci.yml  release.yml
paper/: README.md  closed-loop-memory-system.md  main.tex  references.bib
scripts/: install_service.sh
skill/: SKILL.md
src/: dashboard.html  dashboard.rs  export.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  server.rs
src/ai/: absorb.rs  embedding.rs  mcp_server.rs  mod.rs  rest_api.rs  tagger.rs  vector.rs
src/cli/: commands.rs
src/crypto/: mod.rs  vault_crypto.rs
src/storage/: db.rs  mod.rs  models.rs  vault.rs
tests/: test_real_auth.rs
