[package]
name = "besure"
version = "0.2.0"
edition = "2021"
description = "貔貅记忆 Besure AI — Context Switch Memory System"
license = "MIT"
authors = ["刘正阳（大Joe）"]

[[bin]]
name = "besure"
path = "src/main.rs"

[dependencies]
# 加密
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"

# 存储
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 文件锁
fs2 = "0.4"

# 路径
dirs = "5.0"

# HTTP 客户端（embedding API / LLM API）
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# REST API 服务器
axum = "0.7"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
strip = true
