[package]
name = "besure-app"
version = "0.2.0"
description = "Besure AI Context — Desktop App"
authors = ["刘正阳（大Joe）"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
besure_lib = { path = "..", package = "besure" }

[features]
custom-protocol = ["tauri/custom-protocol"]
